--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
+    "axios": "^1.7.9",
     "date-fns": "^2.30.0",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -39,7 +41,8 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
